# avionics

./: LICENSE  README.md
747-fuel-gauge/pico-mcp4802-pid-747-fuel/: CMakeLists.txt  main.cpp  pwl.h
digital-to-synchro/boards/: hvhc-opamp-v01.brd  hvhc-opamp-v01.sch
digital-to-synchro/boards/pico-spi-breakout/: spi-breakout-v01.brd  spi-breakout-v01.sch
digital-to-synchro/software/pico-mcp4802-dig2synchro/: CMakeLists.txt  main.cpp
gear-and-flaps/boards/: 4ch constant current driver.brd  4ch constant current driver.sch  cc-driver-pico-host-board-as-built.brd  cc-driver-pico-host-board-as-built.sch
gear-and-flaps/sw/pico-tlv5626-gear-and-flaps/: CMakeLists.txt  main.cpp
gear-and-flaps/sw/pico-tlv5626-usb-gear-and-flaps/: CMakeLists.txt  main.cpp  usb_descriptors.c
synchro-to-digital/: convert.py  model.m  offset-dac-circuit.asc
synchro-to-digital/pico-mcp4802-400hz-source-tiny2040/: CMakeLists.txt  main.cpp
synchro-to-digital/ref-gen-board/: vref low current 20 vpp source v01.brd  vref low current 20 vpp source v01.sch
